--- a/RealWorldData.ipynb
+++ b/RealWorldData.ipynb
@@ -1,9 +1,388 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "33bf3609-0f01-4c9a-be4f-11ebd329842d",
+   "metadata": {},
+   "source": [
+    "### Real world phenomenon\n",
+    "\n",
+    "As we have all heard in the last couple of years we have a serious problem with our outpatient waiting list in the Irish Health Care system. I wanted to look at this data and ascertain where we are \n",
+    "in relation to waiting lists and specialitites. I was able to dowmload a dataset from data.gov.ie with this information [dataset](https://data.gov.ie/dataset/outpatient-waiting-list/resource/96f88a60-8ea7-4d6a-9c23-8a7c6b740eb0/view/737ac277-c1be-4708-b527-d26f14799008)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "399fb004-1f84-43e6-b41f-d38477257d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First thing I will do is import the libraries I will need to inspect this dataset.\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "30d5bc4e-2e6a-4fc4-bd8e-d2d021592f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('OPWAITINGLIST.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "352a33cb-6988-4a72-a0cd-876a472a7526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArchiveDate</th>\n",
+       "      <th>Adult_Child</th>\n",
+       "      <th>Speciality</th>\n",
+       "      <th>0-6 Months</th>\n",
+       "      <th>6-12 Months</th>\n",
+       "      <th>12-18 Months</th>\n",
+       "      <th>18+ Months</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Anaesthetics</td>\n",
+       "      <td>146</td>\n",
+       "      <td>75</td>\n",
+       "      <td>172</td>\n",
+       "      <td>1,198</td>\n",
+       "      <td>1,591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Breast Surgery</td>\n",
+       "      <td>2,856</td>\n",
+       "      <td>1,020</td>\n",
+       "      <td>447</td>\n",
+       "      <td>74</td>\n",
+       "      <td>4,397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Cardio-Thoracic Surgery</td>\n",
+       "      <td>256</td>\n",
+       "      <td>68</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Cardiology</td>\n",
+       "      <td>15,770</td>\n",
+       "      <td>7,574</td>\n",
+       "      <td>4,391</td>\n",
+       "      <td>6,251</td>\n",
+       "      <td>33,986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Chemical Pathology</td>\n",
+       "      <td>76</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>Pain Relief</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>Plastic Surgery</td>\n",
+       "      <td>911</td>\n",
+       "      <td>425</td>\n",
+       "      <td>257</td>\n",
+       "      <td>620</td>\n",
+       "      <td>2,213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>Rheumatology</td>\n",
+       "      <td>223</td>\n",
+       "      <td>199</td>\n",
+       "      <td>117</td>\n",
+       "      <td>795</td>\n",
+       "      <td>1,334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>Small Volume Specialities</td>\n",
+       "      <td>48</td>\n",
+       "      <td>21</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>Urology</td>\n",
+       "      <td>883</td>\n",
+       "      <td>563</td>\n",
+       "      <td>358</td>\n",
+       "      <td>1,018</td>\n",
+       "      <td>2,822</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ArchiveDate Adult_Child                 Speciality 0-6 Months 6-12 Months  \\\n",
+       "0   28/10/2021       Adult               Anaesthetics        146          75   \n",
+       "1   28/10/2021       Adult             Breast Surgery      2,856       1,020   \n",
+       "2   28/10/2021       Adult    Cardio-Thoracic Surgery        256          68   \n",
+       "3   28/10/2021       Adult                 Cardiology     15,770       7,574   \n",
+       "4   28/10/2021       Adult         Chemical Pathology         76          25   \n",
+       "..         ...         ...                        ...        ...         ...   \n",
+       "85  28/10/2021       Child                Pain Relief         29           7   \n",
+       "86  28/10/2021       Child            Plastic Surgery        911         425   \n",
+       "87  28/10/2021       Child               Rheumatology        223         199   \n",
+       "88  28/10/2021       Child  Small Volume Specialities         48          21   \n",
+       "89  28/10/2021       Child                    Urology        883         563   \n",
+       "\n",
+       "   12-18 Months 18+ Months   Total  \n",
+       "0           172      1,198   1,591  \n",
+       "1           447         74   4,397  \n",
+       "2            15         26     365  \n",
+       "3         4,391      6,251  33,986  \n",
+       "4            10          8     119  \n",
+       "..          ...        ...     ...  \n",
+       "85            4          2      42  \n",
+       "86          257        620   2,213  \n",
+       "87          117        795   1,334  \n",
+       "88           14         17      99  \n",
+       "89          358      1,018   2,822  \n",
+       "\n",
+       "[90 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73098aa3-2773-49d7-8cdf-5c69118b1ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArchiveDate</th>\n",
+       "      <th>Adult_Child</th>\n",
+       "      <th>Speciality</th>\n",
+       "      <th>0-6 Months</th>\n",
+       "      <th>6-12 Months</th>\n",
+       "      <th>12-18 Months</th>\n",
+       "      <th>18+ Months</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64</td>\n",
+       "      <td>85</td>\n",
+       "      <td>76</td>\n",
+       "      <td>71</td>\n",
+       "      <td>72</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>28/10/2021</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>Endocrinology</td>\n",
+       "      <td>223</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>90</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ArchiveDate Adult_Child     Speciality 0-6 Months 6-12 Months  \\\n",
+       "count           90          90             90         90          90   \n",
+       "unique           1           2             64         85          76   \n",
+       "top     28/10/2021       Adult  Endocrinology        223           4   \n",
+       "freq            90          46              2          2           5   \n",
+       "\n",
+       "       12-18 Months 18+ Months Total  \n",
+       "count            90         90    90  \n",
+       "unique           71         72    87  \n",
+       "top               4          2    38  \n",
+       "freq              8         12     2  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1d55e517-26d4-4966-b1e8-3d350331cd5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 90 entries, 0 to 89\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   ArchiveDate   90 non-null     object\n",
+      " 1   Adult_Child   90 non-null     object\n",
+      " 2   Speciality    90 non-null     object\n",
+      " 3   0-6 Months    90 non-null     object\n",
+      " 4   6-12 Months   90 non-null     object\n",
+      " 5   12-18 Months  90 non-null     object\n",
+      " 6   18+ Months    90 non-null     object\n",
+      " 7   Total         90 non-null     object\n",
+      "dtypes: object(8)\n",
+      "memory usage: 5.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23839959-6de9-4f6f-8486-4ef92f854191",
+   "id": "6b2560f9-17a2-4b3b-8237-6662f3957182",
    "metadata": {},
    "outputs": [],
    "source": []
